lab-gatekeeper-files/lab2/deploy-app-green.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-petclinic-green
  labels:
    app: quarkus-petclinic-green
spec:
  replicas: 2
  selector:
    matchLabels:
      gatekeeper: quarkus-petclinic-green
  template:
    metadata:
      labels:
        gatekeeper: quarkus-petclinic-green
        deployment: quarkus-petclinic-green
    spec:
      containers:
        - name: quarkus-petclinic
          image: 'quay.io/dsanchor/quarkus-petclinic:in-mem'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-petclinic-bluegreen
  labels:
    gatekeeper: quarkus-petclinic-green
spec:
  to:
    kind: Service
    name: quarkus-petclinic-green
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
---
kind: Service
apiVersion: v1
metadata:
  name: quarkus-petclinic-green
  labels:
    gatekeeper: quarkus-petclinic-green
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    gatekeeper: quarkus-petclinic-green
    deployment: quarkus-petclinic-green
  type: ClusterIP
  sessionAffinity: None
